force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__BusinessSiteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BusinessSiteId__c</fullName>
    <label>Business Site</label>
    <referenceTo>vlocity_ps__BusinessSite__c</referenceTo>
    <relationshipName>SiteServicesProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>