force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractId__c</fullName>
    <formula>CASESAFEID(vlocity_ps__ContractLineItemId__r.vlocity_ps__ContractId__r.Id)</formula>
    <label>Contract Id</label>
    <type>Text</type>
</CustomField>