force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ContractLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>vlocity_ps__ContractLineItem__c</referenceTo>
    <relationshipLabel>Site Offerings</relationshipLabel>
    <relationshipName>SiteOfferings</relationshipName>
    <type>Lookup</type>
</CustomField>