force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractStatus__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>