force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ParentContractStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentContractStatus__c</fullName>
    <formula>TEXT(vlocity_ps__ContractLineItemId__r.vlocity_ps__ContractId__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Contract Status</label>
    <type>Text</type>
</CustomField>