force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ProductUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductUnitPrice__c</fullName>
    <formula>vlocity_ps__ContractLineItemId__r.vlocity_ps__UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>