force-app/main/default/objects/vlocity_ps__BusinessSiteOffering__c/fields/vlocity_ps__ProductUoM__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductUoM__c</fullName>
    <formula>vlocity_ps__ContractLineItemId__r.vlocity_ps__UoM__c</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>